# pageflip

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  STABILITY.md  build.rs  bullseye.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: audit-log.md  bug-report.md  slide-event-schema.json  weekly-digest.md
meetcat/: agents.go  agents_test.go  artifact.go  artifact_test.go  colors.go  doctor.go  doctor_test.go  glossary.go  glossary_test.go  go.mod  go.sum  hash.go  hash_test.go  log.go  log_test.go  main.go  main_test.go  manifest.go  resolver.go  resolver_test.go  revisits.go  revisits_test.go  spawn.go  tui.go  tui_test.go  web.go
meetcat-1777115734019/: session-ids.json
meetcat/docs/: bug-report-meetcat.md
meetcat/prompts/: constructive.md  contradictions.md  dejargoniser.md  neutral.md  skeptic.md
meetcat/web/: index.html  script.js  style.css
packaging/: pageflip.rb
scripts/: install-digest-cron.sh  meetings-digest.sh  transcribe.py
src/: dedup.rs  doctor.rs  events.rs  help_agent.txt  main.rs  picker.rs  policy.rs  session_log.rs
src/audio/: capture.rs  mod.rs  whisperx.rs
src/capture/: macos.rs  mod.rs
src/pageflip/: __init__.py  cli.py
src/redact/: face_blur.rs  mod.rs  ocr.rs  pii.rs  text_redactor.rs
