[package]
name = "pageflip"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Marcelo Cantos"]
license = "Apache-2.0"
description = "Capture slides from a screen region whenever they change"
repository = "https://github.com/marcelocantos/pageflip"
readme = "README.md"
keywords = ["screenshot", "screen-capture", "slides", "meeting", "perceptual-hash"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "pageflip"
path = "src/main.rs"

[[bin]]
name = "pageflip-feed"
path = "src/bin/pageflip-feed.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3"
image_hasher = "3"
notify = "7.0.0"
softbuffer = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
winit = "0.30"
xcap = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.4", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSData",
    "NSDictionary",
    "NSError",
    "NSObject",
    "NSString",
] }
objc2-core-foundation = { version = "0.3.2", features = [
    "CFCGTypes",
    "objc2",
] }
objc2-vision = { version = "0.3.2", features = [
    "VNDetectFaceRectanglesRequest",
    "VNObservation",
    "VNRequest",
    "VNRequestHandler",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
